Fix tumbleweed crash